Trying to fix spacing again

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -101,7 +101,7 @@
 
 
 .link-cards .card {
-  border: 1px none $dark;
+  border: none;
   padding: 0;
 }
 
@@ -133,7 +133,7 @@
 }
 
 .link-cards .card .card-body ul li {
-  padding-bottom: -0.2rem;
+  margin-bottom: -0.75rem;
 }
 
 
